--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,10 @@
 # TODO: 需修改的配置，用于上传到 CloudFlare
 name = "blogroll"
 type = "webpack"
-account_id = "ed02115b0333e518a62d649ee291264b"
+account_id = "d945a0d7d4d120cd80b276f4b474ebf9"
 workers_dev = true
 # route = "blogroll.icl.moe/*"
-zone_id = "374cfa163417e4f4a64edb66a0ddc218"
+# zone_id = "374cfa163417e4f4a64edb66a0ddc218"
 
 [site]
 bucket = "./web/dist"
